Update homepage footer and styles

--- a/pages/blog_home.html
+++ b/pages/blog_home.html
@@ -208,10 +208,9 @@
         <footer class="home-footer">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                        <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"/>
-                    </svg>
-                    <span>NeonBlog</span>
+<i class="fa-solid fa-bolt logo-icon"></i>
+
+                    <span>Bloggy</span>
                 </div>
                 <div class="footer-links">
                     <a href="#">Privacy Policy</a>
